manifests/09_network-policy-allow-all-egress-from-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-all-egress-contr
 namespace: openshift-cluster-csi-drivers
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     app: aws-ebs-csi-driver-controller
 egress:
 - ports:
   - protocol: TCP
     port: 1
     endPort: 65535
 policyTypes:
 - Egress
